--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        //Поддержка генерации изображений для старых версий Android
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
