--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,13 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0-beta02'
     implementation 'com.google.android.material:material:1.0.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    //Debug query for Retrofit
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
