--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.google.android.material:material:1.1.0-alpha03'//для TabLayout
+
+    // Gradle Groovy DLS
+    implementation "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}"
 }
