--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'com.google.android.material:material:1.1.0-alpha03'//для TabLayout
+    implementation 'com.google.android.material:material:1.1.0-alpha03'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'//для TabLayout
 }
