--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -54,6 +57,8 @@ dependencies {
     def lifecycle_version = "2.0.0"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.google.android.material:material:1.1.0-alpha03'
