--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
 
     // Gradle Groovy DLS
     implementation "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}"
+
+    annotationProcessor 'com.android.databinding:compiler:3.2.0-alpha10'
 }
