--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha04'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'//для TabLayout
 
-    implementation 'com.thoughtbot:expandablerecyclerview:1.3' //для левого меню
+    implementation 'com.thoughtbot:expandablecheckrecyclerview:1.4' //для левого/правого меню
 
     // Gradle Groovy DLS
     implementation "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}"
