--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}"
 
     kapt 'com.android.databinding:compiler:3.2.0-alpha10'
+    //API VK
+    implementation 'com.vk:androidsdk:2.0.2'
 }
