--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'//измененно на эту версию изза ошибки
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
-    //https://stackoverflow.com/questions/54708366/addfontweightstyle-nosuchmethodexception-on-textview
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
@@ -47,13 +46,13 @@ dependencies {
     implementation 'androidx.viewpager:viewpager:1.0.0'
 
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
     //Debug query for Retrofit
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 
     testImplementation 'junit:junit:4.12'
@@ -67,15 +66,20 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'//для TabLayout
+    // Карта в развернутой вакансии
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
-    implementation 'com.thoughtbot:expandablecheckrecyclerview:1.4' //для левого/правого меню
+    //для левого/правого меню
+    implementation 'com.thoughtbot:expandablecheckrecyclerview:1.4'
 
     // Gradle Groovy DLS
     implementation "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}"
 
     kapt 'com.android.databinding:compiler:3.2.0-alpha10'
-    //API VK
+
+    // API VK
     implementation 'com.vk:androidsdk:2.0.2'
+
+    // API Facebook
+    implementation 'com.facebook.android:facebook-android-sdk:4.41.0'
 }
