--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,28 @@
             </meta-data>
         </provider>
 
+        <!-- API Facebook -->
+        <meta-data android:name = "com.facebook.sdk.ApplicationId"
+            android:value = "@string/facebook_app_id"/>
+
+        <activity android:name = "com.facebook.FacebookActivity"
+            android:configChanges = "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label = "@string/app_name"/>
+
+        <activity android:name = "com.facebook.CustomTabActivity"
+            android:exported = "true">
+            <intent-filter>
+                <action android:name = "android.intent.action.VIEW"/>
+                <category android:name = "android.intent.category.DEFAULT"/>
+                <category android:name = "android.intent.category.BROWSABLE"/>
+                <data android:scheme = "@string/fb_login_protocol_scheme"/>
+            </intent-filter>
+        </activity>
+
+        <!-- Disable Automatically Logged Events Facebook -->
+        <meta-data android:name = "com.facebook.sdk.AutoLogAppEventsEnabled"
+            android:value = "false"/>
+
     </application>
 
 </manifest>
