--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
 
     <uses-permission android:name="android.permission.CAMERA"/>
 
+    <!-- Google+ -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+
     <application
             android:name=".utils.Retrofit"
             android:allowBackup="true"
@@ -64,6 +68,11 @@
         <!-- Disable Automatically Logged Events Facebook -->
         <meta-data android:name = "com.facebook.sdk.AutoLogAppEventsEnabled"
             android:value = "false"/>
+
+        <!-- API Google+ -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
     </application>
 
