--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,7 @@ dependencies {
 
     // API Facebook
     implementation 'com.facebook.android:facebook-android-sdk:4.41.0'
+
+    // API OK
+    implementation 'ru.ok:odnoklassniki-android-sdk:2.0.3'
 }
